--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   width: 350px;
   height: 600px;
   position: relative;
-  background-color: red;
+  background-color: black;
   margin: 0 auto;
   background-image: url("../img/mobile/image-hero.jpg");
   background-repeat: no-repeat;
@@ -17,10 +17,46 @@
       padding-left: 30px; }
       .main-header .nav-menu .logo img {
         height: 22px; }
-    .main-header .nav-menu .menu {
+    .main-header .nav-menu .mobile-menu {
+      width: 350px;
+      height: 570px;
+      background-color: black;
+      position: relative;
+      display: none; }
+      .main-header .nav-menu .mobile-menu img {
+        height: 22px; }
+      .main-header .nav-menu .mobile-menu .mobile-nav {
+        padding: 50px 0 0 30px; }
+        .main-header .nav-menu .mobile-menu .mobile-nav .mobile-ul {
+          list-style: none;
+          padding: 0;
+          margin: 0; }
+          .main-header .nav-menu .mobile-menu .mobile-nav .mobile-ul .mobile-li a {
+            color: white;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 23px;
+            line-height: 2.3; }
+      .main-header .nav-menu .mobile-menu .icon-close {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        top: 0;
+        right: 30px; }
+        .main-header .nav-menu .mobile-menu .icon-close img {
+          max-width: 20px;
+          height: 20px;
+          cursor: pointer; }
+    .main-header .nav-menu .hamburger-menu {
       width: 50%;
-      height: 30px;
-      padding-right: 30px; }
+      padding: 5px 30px 0 0; }
+      .main-header .nav-menu .hamburger-menu img {
+        width: 24px;
+        height: 16px;
+        float: right;
+        cursor: pointer; }
+    .main-header .nav-menu .nav {
+      display: none; }
   .main-header .immersive-text {
     padding: 0 30px;
     position: absolute;
@@ -55,6 +91,8 @@
     height: 115px;
     margin-bottom: 20px;
     position: relative;
+    -webkit-box-shadow: inset 120px 0px 100px -90px #000000;
+    -moz-box-shadow: inset 120px 0px 100px -90px #000000;
     box-shadow: inset 120px 0px 100px -90px #000000; }
     .mainDiv .ourCreationsDiv .creationsDivs p {
       text-transform: uppercase;
