--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -86,3 +86,55 @@
     }
   }
 }
+
+
+@media (min-width: 1200px) {
+  .main-header {
+    width: 100%;
+    height: 700px;
+    background-image: url("../img/desktop/image-hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-box-shadow: inset 1px 0px 400px 15px #000000;
+    -moz-box-shadow: inset 1px 0px 400px 15px #000000;
+    box-shadow: inset 1px 0px 400px 15px #000000;
+    .nav-menu {
+      height: 50px;
+      margin-top: 70px;
+      padding: 0 100px;
+      .logo {
+        width: 60%;
+        height: 50px;
+        img {
+          height: 30px;
+        }
+      }
+      .hamburger-menu {
+        display: none;
+      }
+      .nav {
+        width: 40%;
+        display: block;
+        display: flex;
+        justify-content: space-between;
+        padding: 8px 0 0 100px;
+        padding-right: 30px;
+        li > a {
+          color: white;
+          padding: 0;
+          margin: 0;
+          font-size: 17px;
+          font-weight: bold;
+        }
+      }
+    }
+    .immersive-text {
+      width: 62%;
+      padding: 0 120px;
+      h1 {
+        font-size: 65px;
+        padding: 40px 40px 35px;
+      }
+    }
+  }
+}
