--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -23,10 +23,16 @@
     .creationsDivs {
       height: 115px;
       margin-bottom: 20px;
+      padding: 0;
       position: relative;
       -webkit-box-shadow: inset 120px 0px 100px -90px #000000;
       -moz-box-shadow: inset 120px 0px 100px -90px #000000;
       box-shadow: inset 120px 0px 100px -90px #000000;
+      a {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+      }
       p {
         text-transform: uppercase;
         color: white;
@@ -96,9 +102,94 @@
       background-color: white;
       text-transform: uppercase;
       font-weight: bold;
-      margin: 0 auto;
+      // margin: 0 auto;
+      margin-left: 23%;
       margin-bottom: 100px;
       letter-spacing: 3px;
+    }
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .mainDiv {
+    width: 80%;
+    .mainArticleDiv {
+      // URADITI KASNIJE
+    }
+    .ourCreationsDiv {
+      position: relative;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      .creationsDivs {
+        width: 23%;
+        height: 500px;
+        -webkit-box-shadow: inset 1px 0px 100px 15px #000000;
+        -moz-box-shadow: inset 1px 0px 100px 15px #000000;
+        box-shadow: inset 1px 0px 100px 15px #000000;
+        p {
+          font-size: 32px;
+          line-height: 1;
+          bottom: 10px;
+          left: 40px;
+        }
+      }
+      .ourCreationsTxt {
+        width: 100%;
+        height: 115px;
+        box-shadow: none;
+        h3 {
+          float: left;
+        }
+      }
+      .deepEarth {
+        background-image: url("../img/desktop/image-deep-earth.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .nightArcade {
+        background-image: url("../img/desktop/image-night-arcade.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .soccerTeamVr {
+        background-image: url("../img/desktop/image-soccer-team.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .theGrid {
+        background-image: url("../img/desktop/image-grid.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .frompUpAboveVr {
+        background-image: url("../img/desktop/image-from-above.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .pocketBorealis {
+        background-image: url("../img/desktop/image-pocket-borealis.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .theCuriosity {
+        background-image: url("../img/desktop/image-curiosity.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .makeItFisheye {
+        background-image: url("../img/desktop/image-fisheye.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 35px;
+      }
+      button {
+        position: absolute;
+        top: 33px;
+        right: 12px;
+      }
     }
   }
 }
