--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -40,6 +40,9 @@
               text-transform: uppercase;
               font-size: 23px;
               line-height: 2.3;
+              &:hover {
+                border-bottom: 1px solid white;
+              }
             }
           }
         }
@@ -125,6 +128,9 @@
           margin: 0;
           font-size: 17px;
           font-weight: bold;
+          &:hover {
+            border-bottom: 1px solid white;
+          }
         }
       }
     }
